--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 build
 out
 src/main/java/com/wallace/rpg/openlegend/ontology
+src/main/resources/banes.ttl
+src/main/resources/boons.ttl
+src/main/resources/feats.ttl
